# yt-visionseed-sdk-esp32

./: CMakeLists.txt  README.md  component.mk
example/: CMakeLists.txt
example/main/: CMakeLists.txt  hello_visionseed.cpp
sdk/include/: CameraExposureParams.pb.h  DataLink.h  FaceDetectionResult.pb.h  FileListResult.pb.h  FilePart.pb.h  FlasherParams.pb.h  RegisterFaceIdWithPicParams.pb.h  SystemStatusResult.pb.h  YtConfig.h  YtLog.h  YtMessenger.h  YtMsg.pb.h  YtVisionSeed.h
sdk/src/: CameraExposureParams.pb.c  DataLink.cpp  DataLinkPosix.cpp  FaceDetectionResult.pb.c  FileListResult.pb.c  FilePart.pb.c  FlasherParams.pb.c  RegisterFaceIdWithPicParams.pb.c  SimplePool.cpp  SystemStatusResult.pb.c  YtMessenger.cpp  YtMsg.pb.c  YtVisionSeed.cpp
src/: DataLinkESP32.cpp  DataLinkESP32.h
